language/move-lang/tests/move_check/typing/module_call_wrong_single_argument.exp
error: 

    ┌── tests/move_check/typing/module_call_wrong_single_argument.move:17:23 ───
    │
 17 │     public fun foo(s: S) {
    │                       - Is not compatible with: '0x1::M::S'
    ·
 24 │         foo(0);
    │         ^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 's'
    │             - The type: integer
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_single_argument.move:20:23 ───
    │
 20 │     public fun bar(x: u64) {
    │                       --- Is not compatible with: 'u64'
    ·
 25 │         bar(S{});
    │         ^^^^^^^^ Invalid call of '0x1::M::bar'. Invalid argument for parameter 'x'
    │             --- The type: '0x1::M::S'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_single_argument.move:20:23 ───
    │
 20 │     public fun bar(x: u64) {
    │                       --- Is not compatible with: 'u64'
    ·
 26 │         bar(0x0);
    │         ^^^^^^^^ Invalid call of '0x1::M::bar'. Invalid argument for parameter 'x'
    │             --- The type: 'address'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_single_argument.move:6:23 ───
    │
  6 │     public fun foo(s: S) {
    │                       - Is not compatible with: '0x1::X::S'
    ·
 30 │         X::foo(S{});
    │         ^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 's'
    │                --- The type: '0x1::M::S'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_single_argument.move:6:23 ───
    │
  6 │     public fun foo(s: S) {
    │                       - Is not compatible with: '0x1::X::S'
    ·
 31 │         X::foo(0);
    │         ^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 's'
    │                - The type: integer
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_single_argument.move:9:23 ───
    │
  9 │     public fun bar(x: u64) {
    │                       --- Is not compatible with: 'u64'
    ·
 32 │         X::bar(S{});
    │         ^^^^^^^^^^^ Invalid call of '0x1::X::bar'. Invalid argument for parameter 'x'
    │                --- The type: '0x1::M::S'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_single_argument.move:9:23 ───
    │
  9 │     public fun bar(x: u64) {
    │                       --- Is not compatible with: 'u64'
    ·
 33 │         X::bar(false);
    │         ^^^^^^^^^^^^^ Invalid call of '0x1::X::bar'. Invalid argument for parameter 'x'
    │                ----- The type: 'bool'
    │

